fix: z-index for hero button-group

--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -50,7 +50,7 @@
             fill: $black
         &-group
             position: relative  
-            z-index: 10
+            z-index: 5
             display: flex
             align-items: center
             margin-bottom: 16px
